Fix explore-item stretching past normal width flow

--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -530,6 +530,7 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
 }
 .explore-container {
   width: 100%;
@@ -548,8 +549,8 @@ section {
 }
 .explore-list {
   display: grid;
-  grid-template-columns: repeat(4, minmax(270px, 1fr));
-  grid-template-rows: repeat(2, minmax(200px, 1fr));
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  grid-template-rows: repeat(2, minmax(0, 1fr));
   grid-template-areas:
     "a a b c "
     "d e e c ";
@@ -575,7 +576,7 @@ section {
   grid-area: e;
 }
 
-.explore-list>.explore-list-item {
+.explore-list >.explore-list-item {
   position: relative;
   width: 100%;
   height: 100%;
@@ -610,7 +611,6 @@ section {
   position: absolute;
   bottom: 20px;
   left: 20px;
-  /* width: 100%; */
   color: #f5f5f5;
   -webkit-transition: all 0.5s ease;
   -moz-transition: position 10s;
